add all changes

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,1 +1,10 @@
-<p>banner works!</p>
+<section class="banner">
+    <div class="banner-box">
+        <div class="intro-text">
+            </div>
+            
+            <img src="assets/images/500_F_189991259_6ZrR7CTUtMbvng90m219BkQI1PumD719.jpg">
+            
+        </div>
+</section>
+
