add all changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
-<app-banner></app-banner>
-<app-footer></app-footer>
-<app-course-featured></app-course-featured>
+<app-banner *ngIf="router.url=='/'"></app-banner>
+<app-course-featured *ngIf="router.url=='/'"></app-course-featured>
 
-<router-outlet></router-outlet> 
+
+<router-outlet></router-outlet>
+<app-footer></app-footer> 
 
