--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,9 +1,22 @@
 <section class="banner">
     <div class="banner-box">
         <div class="intro-text">
-            </div>
             
-            <img src="assets/images/500_F_189991259_6ZrR7CTUtMbvng90m219BkQI1PumD719.jpg">
+        </div>
+        <header class="page-header header">
+            <div class="description">
+                <h1>Welcome to A.A.K.B.N ,Telangapada</h1>
+
+
+                </div>
+            
+           
+
+            </header>
+            
+
+         
+           
             
         </div>
 </section>
