--- a/src/app/courses/course-featured/course-featured.component.html
+++ b/src/app/courses/course-featured/course-featured.component.html
@@ -1,1 +1,78 @@
-<p>course-featured works!</p>
+<section class="feature-blog mtb-48">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-4 col-sm-12">
+                <div class="blog-box">
+                    <img src="assets/images/frontgate.jpg" alt="blog1">
+                    <!-- <h1>Lorem ipsum dolor sit amet consect
+                        etur adipisicing elit. Illum, suscipit!</h1> -->
+                    <!-- <p>by<span>Santanu Kumar Paikaray</span></p> -->
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Repellat minus possimus maiores officiis dolorem, molestias rem nisi impedit ea
+                         obcaecati id distinctio autem facilis vitae totam cumque magnam debitis expedita!</p>
+                        <!-- <a href="#" class="btn btn-danger">Read more</a> -->
+                    </div>
+                </div>
+                <div class="col-md-4 col-md-4 col-sm-12">
+                    <div class=blog-box>
+                        <img src="assets/images/schoolfront (2).jpg" alt="blog2"/>
+                        <!-- <h1>Lorem ipsum dolor sit amet consectetu
+                            r adipisicing elit. Nemo, corrupti!</h1> -->
+                            <!-- <p>by<span>Santanu Kumar Paikaray</span></p> -->
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                 Ullam cupiditate velit similique vitae qui sunt amet quae dolore fuga natus,
+                                 deleniti molestiae, deserunt commodi? Voluptate saepe cumque sunt
+                                  tempora doloribus?</p>
+                                 <!-- <a href="#" class="btn btn-danger">Read more</a> -->
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-md-4 col-sm-12">
+                        <div class=blog-box>
+                            <img src="assets/images/schoolfront (3).jpg" alt="blog3"/>
+                            <!-- <h1>Lorem ipsum dolor sit amet consectetu
+                                r adipisicing elit. Nemo, corrupti!</h1> -->
+                                <!-- <p>by<span>Santanu Kumar Paikaray</span></p> -->
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi
+                                     consequatur earum nostrum a, consequuntur saepe aperiam dolor dignissimos,
+                                     soluta reprehenderit placeat, iusto repudiandae debitis ipsa odit molestias
+                                      commodi quo culpa.</p>
+                                     <!-- <a href="#" class="btn btn-danger">Read more</a> -->
+                            </div>
+                        </div>
+                        <!-- <div class="col-md-4">
+                            <div class=blog-box>
+                                <img src="assets/images/images.png" alt="blog1"/>
+                                <h1>Lorem ipsum dolor sit amet consectetu
+                                    r adipisicing elit. Nemo, corrupti!</h1>
+                                    <p>by<span>Santanu Kumar Paikaray</span></p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                         Tempore, ratione.</p>
+                                         <a href="#" class="btn btn-danger">Read more</a>
+                                </div>
+                            </div> -->
+                            <!-- <div class="col-md-4">
+                                <div class=blog-box>
+                                    <img src="assets/images/images.png" alt="blog1"/>
+                                    <h1>Lorem ipsum dolor sit amet consectetu
+                                        r adipisicing elit. Nemo, corrupti!</h1>
+                                        <p>by<span>Santanu Kumar Paikaray</span></p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                             Tempore, ratione.</p>
+                                             <a href="#" class="btn btn-danger">Read more</a>
+                                    </div>
+                                </div> -->
+                                <!-- <div class="col-md-4">
+                                    <div class=blog-box>
+                                        <img src="assets/images/images.png" alt="blog1"/>
+                                        <h1>Lorem ipsum dolor sit amet consectetu
+                                            r adipisicing elit. Nemo, corrupti!</h1>
+                                            <p>by<span>Santanu Kumar Paikaray</span></p>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                 Tempore, ratione.</p>
+                                                 <a href="#" class="btn btn-danger">Read more</a>
+                                        </div>
+                                    </div> -->
+                        </div>
+                        </div>
+            
+    </section>
