--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,25 @@
-<p>footer works!</p>
+<footer class="page-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <h6 class="text-uppercase font-weight-bold">
+                    Additional Information
+                </h6>
+                <p>Under Deipur Gramapanchyata,Near Telangapada Mainar School</p>
+              
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <h6 class="text-uppercase font-weight-bold">
+                        Contact
+                    </h6>
+                    <p>
+                        At-Telangapada,Block-Kanas,Dist-Puri,Pin no.-752019
+                        <br>santoshpaikaray1972@gmail.com
+                        <br>+91-9937016910
+                    </p>
+
+                </div>
+            </div>
+        </div>
+
+</footer>
