--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,19 +6,19 @@
     <div class="collapse navbar-collapse" id="main-navigation">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a routerLink="/" routerLinkActive="active" class="nav-link" >Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a routerLink="/course" routerLinkActive="active" class="nav-link" >Courses</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Courses</a>
+                        <a routerLink="/page/about" routerLinkActive="active" class="nav-link" >About</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Events</a>
-                            </li>
+                         <li class="nav-item">
+                            <a routerLink="/event" routerLinkActive="active" class="nav-link" >Events</a>
+                            </li> 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact Us</a>
+                                <a routerLink="/contact" routerLinkActive="active" class="nav-link" >Contact Us</a>
                                 </li>
                                 </ul>
                                 </div>
