add all changes

--- a/src/app/courses/course-detail/course-detail.component.html
+++ b/src/app/courses/course-detail/course-detail.component.html
@@ -1,1 +1,25 @@
-<p>course-detail works!</p>
+<section class="blog-list mtb-48">
+    <div class="Container">
+        <h1>Courses</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="blog-box">
+                    <img src="assets/images/images.png" alt="llog1"/>
+                    <h3>Angular 7 Full Courses</h3>
+                    <p>by<span>Santanu Kumar Paikaray</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
+                        ducimus velit architecto optio fugit nemo aut error ullam,
+                         maxime vitae?</p>
+                         <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">Read more...</a>
+                    </div>
+                </div>
+              
+                   
+            </div>
+        </div>
+        <div class="col-md-4">
+        <app-course-recent></app-course-recent>
+        <app-course-categories></app-course-categories>
+        </div>
+        
+    </section>
