--- a/src/app/staticpages/page/page.component.html
+++ b/src/app/staticpages/page/page.component.html
@@ -1,1 +1,40 @@
-<p>page works!</p>
+<section class="blog-list mtb-48">
+    <div class="Container">
+        <h1>About School</h1>
+        <div class="row">
+             <div class="col-md-4">
+                <div class="blog-box">
+                    <img src="assets/images/frontofclass room.jpg" alt="llog1"/>
+                  
+                    
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
+                        ducimus velit architecto optio fugit nemo aut error ullam,
+                         maxime vitae?</p>
+                       
+                    </div>
+                </div> 
+                <div class="col-md-4">
+                    <div class="blog-box">
+                        <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/>
+                        
+                      
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
+                            ducimus velit architecto optio fugit nemo aut error ullam,
+                             maxime vitae?</p>
+                            
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="blog-box">
+                            <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/>
+                            
+                            
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
+                                ducimus velit architecto optio fugit nemo aut error ullam,
+                                 maxime vitae?</p>
+                                
+                            </div>
+                        </div>
+            </div>
+        </div>
+    </section>
