--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,38 +1,38 @@
 <section class="blog-list mtb-48">
     <div class="Container">
-        <h1>Courses</h1>
+        <h1>All Classes</h1>
         <div class="row">
             <div class="col-md-4">
                 <div class="blog-box">
-                    <img src="assets/images/images.png" alt="llog1"/>
-                    <h3>Angular 7 Full Courses</h3>
-                    <p>by<span>Santanu Kumar Paikaray</span></p>
+                    <img src="assets/images/frontofclass room.jpg" alt="llog1"/>
+                    <h3>8th class</h3>
+                    
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
                         ducimus velit architecto optio fugit nemo aut error ullam,
                          maxime vitae?</p>
-                         <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">Read more...</a>
+                         <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">All Courses...</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="blog-box">
-                        <img src="assets/images/images.png" alt="llog1"/>
+                        <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/>
                         <h3>Angular 7 Full Courses</h3>
-                        <p>by<span>Santanu Kumar Paikaray</span></p>
+                      
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
                             ducimus velit architecto optio fugit nemo aut error ullam,
                              maxime vitae?</p>
-                             <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">Read more...</a>
+                             <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">All Courses...</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="blog-box">
-                            <img src="assets/images/images.png" alt="llog1"/>
+                            <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/>
                             <h3>Angular 7 Full Courses</h3>
-                            <p>by<span>Santanu Kumar Paikaray</span></p>
+                            
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
                                 ducimus velit architecto optio fugit nemo aut error ullam,
                                  maxime vitae?</p>
-                                 <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">Read more...</a>
+                                 <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">All Courses...</a>
                             </div>
                         </div>
             </div>
