--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,23 +5,29 @@
     </button>
     <div class="collapse navbar-collapse" id="main-navigation">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a routerLink="/" routerLinkActive="active" class="nav-link" >Home</a>
+            <li class="nav-item active">
+                <a routerLink="/" routerLinkActive="Active" class="nav-link" >Home</a>
                 </li>
-                <li class="nav-item">
-                    <a routerLink="/course" routerLinkActive="active" class="nav-link" >Courses</a>
+                <li class="nav-item active">
+                    <a routerLink="/course" routerLinkActive="Active" class="nav-link" >Courses</a>
                     </li>
-                    <li class="nav-item">
-                        <a routerLink="/page/about" routerLinkActive="active" class="nav-link" >About</a>
+                    <li class="nav-item active">
+                        <a routerLink="/page/about" routerLinkActive="Active" class="nav-link" >About</a>
                         </li>
-                         <li class="nav-item">
-                            <a routerLink="/event" routerLinkActive="active" class="nav-link" >Events</a>
+                         <li class="nav-item active">
+                            <a routerLink="/event" routerLinkActive="Active" class="nav-link" >Events</a>
                             </li> 
-                            <li class="nav-item">
-                                <a routerLink="/contact" routerLinkActive="active" class="nav-link" >Contact Us</a>
+                            <li class="nav-item active">
+                                <a routerLink="/contact" routerLinkActive="Active" class="nav-link" >Contact Us</a>
                                 </li>
                                 </ul>
-                                </div>
+                                <ul class="navbar-nav ml-auto">
+                                    <li class="nav-item">
+                                        <a class=" nav-link" href="#">Registration</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href='#'>Login</a>
+                                        </li>
                                 
 
 </nav>
