--- a/src/app/courses/course-detail/course-detail.component.html
+++ b/src/app/courses/course-detail/course-detail.component.html
@@ -4,22 +4,37 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="blog-box">
-                    <img src="assets/images/images.png" alt="llog1"/>
-                    <h3>Angular 7 Full Courses</h3>
-                    <p>by<span>Santanu Kumar Paikaray</span></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
-                        ducimus velit architecto optio fugit nemo aut error ullam,
-                         maxime vitae?</p>
-                         <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">Read more...</a>
+                   
+                    <h3>8th class</h3>
+              
+                  <p>English</p>
+                  <p>Math</p>
+                  <p>History</p>
+                  <p>Geography</p>
+
+                  <h4>9th class</h4>
+                  <p>English</p>
+                  <p>Math</p>
+                  <p>History</p>
+                  <p>Geography</p>
+
+                  <h4>10th class</h4>
+                  <p>English</p>
+                  <p>Math</p>
+                  <p>History</p>
+                  <p>Geography</p>
+                        
                     </div>
                 </div>
               
                    
             </div>
         </div>
-        <div class="col-md-4">
-        <app-course-recent></app-course-recent>
+        <!-- <div class="col-md-4">
+        <app-course-recent>
+            <h1>Happy</h1>
+        </app-course-recent>
         <app-course-categories></app-course-categories>
-        </div>
+        </div> -->
         
     </section>
