--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -16,7 +16,7 @@
                 <div class="col-md-4">
                     <div class="blog-box">
                         <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/>
-                        <h3>Angular 7 Full Courses</h3>
+                        <h3>9th class</h3>
                       
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
                             ducimus velit architecto optio fugit nemo aut error ullam,
@@ -27,7 +27,7 @@
                     <div class="col-md-4">
                         <div class="blog-box">
                             <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/>
-                            <h3>Angular 7 Full Courses</h3>
+                            <h3>10th class</h3>
                             
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
                                 ducimus velit architecto optio fugit nemo aut error ullam,
