--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,11 +23,13 @@
                                 </ul>
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item">
-                                        <a class=" nav-link" href="#">Registration</a>
+                                        <a routerLink="/Registration" routerLinkActive="Active" class="nav-link" class=" nav-link">Registration</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href='#'>Login</a>
+                                        <a routerLink="/Login" routerLinkActive="Active" class="nav-link" class="nav-link">Login</a>
                                         </li>
+                                        </ul>
+                                        </div>
                                 
 
 </nav>
