add all changes

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -6,6 +6,7 @@
         <header class="page-header header">
             <div class="description">
                 <h1>Welcome to A.A.K.B.N ,Telangapada</h1>
+                <h4>"WE SEEK TO MAXIMIZE THE POTENTIAL OF YOUR CHILD IN THE SAFE ENVIRONMENT OF OUR SCHOOL."</h4>
 
 
                 </div>
