--- a/src/app/courses/course-featured/course-featured.component.html
+++ b/src/app/courses/course-featured/course-featured.component.html
@@ -3,26 +3,22 @@
         <div class="row">
             <div class="col-md-4 col-md-4 col-sm-12">
                 <div class="blog-box">
-                    <img src="assets/images/frontgate.jpg" alt="blog1">
+                    <img src="assets/images/faculty.jpg" alt="blog1" class="firstimage">
                     <!-- <h1>Lorem ipsum dolor sit amet consect
                         etur adipisicing elit. Illum, suscipit!</h1> -->
                     <!-- <p>by<span>Santanu Kumar Paikaray</span></p> -->
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Repellat minus possimus maiores officiis dolorem, molestias rem nisi impedit ea
-                         obcaecati id distinctio autem facilis vitae totam cumque magnam debitis expedita!</p>
+                     <p>“Learning is to know; and Education is to think feel and do”</p> 
                         <!-- <a href="#" class="btn btn-danger">Read more</a> -->
                     </div>
                 </div>
                 <div class="col-md-4 col-md-4 col-sm-12">
                     <div class=blog-box>
-                        <img src="assets/images/schoolfront (2).jpg" alt="blog2"/>
+                        <img src="assets/images/frontgate.jpg" alt="blog2"/>
                         <!-- <h1>Lorem ipsum dolor sit amet consectetu
                             r adipisicing elit. Nemo, corrupti!</h1> -->
                             <!-- <p>by<span>Santanu Kumar Paikaray</span></p> -->
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                 Ullam cupiditate velit similique vitae qui sunt amet quae dolore fuga natus,
-                                 deleniti molestiae, deserunt commodi? Voluptate saepe cumque sunt
-                                  tempora doloribus?</p>
+                                 Ullam cupiditate velit similique vitae </p>
                                  <!-- <a href="#" class="btn btn-danger">Read more</a> -->
                         </div>
                     </div>
@@ -33,9 +29,7 @@
                                 r adipisicing elit. Nemo, corrupti!</h1> -->
                                 <!-- <p>by<span>Santanu Kumar Paikaray</span></p> -->
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi
-                                     consequatur earum nostrum a, consequuntur saepe aperiam dolor dignissimos,
-                                     soluta reprehenderit placeat, iusto repudiandae debitis ipsa odit molestias
-                                      commodi quo culpa.</p>
+                                     consequatur earum nostrum </p>
                                      <!-- <a href="#" class="btn btn-danger">Read more</a> -->
                             </div>
                         </div>
