--- a/src/app/courses/course-list/course-list.component.css
+++ b/src/app/courses/course-list/course-list.component.css
@@ -7,3 +7,13 @@ h1{
     padding: 5px;
     max-width: 180em;
 }
+.imgone{
+    height: 40em;
+}
+.imgtwo{
+    height: 40em;
+}
+.imgthree{
+    height: 40em;
+
+}
