--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -4,34 +4,41 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="blog-box">
-                    <img src="assets/images/frontofclass room.jpg" alt="llog1"/>
+                    <img src="assets/images/frontofclass room.jpg" alt="llog1" class="imgone /">
                     <h3>8th class</h3>
                     
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
-                        ducimus velit architecto optio fugit nemo aut error ullam,
-                         maxime vitae?</p>
+                    <p>Generally, Class 9th students who have just
+                        finished their junior level education have little
+                        or no knowledge about the secondary level learning
+                        because they have been in a different education pattern till now.</p>
                          <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">All Courses...</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="blog-box">
-                        <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/>
+                        <img src="assets/images/outerclassroom (3).jpg" alt="llog1" class="imgtwo"/>
                         <h3>9th class</h3>
                       
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
                             ducimus velit architecto optio fugit nemo aut error ullam,
-                             maxime vitae?</p>
+                             maxime vitae?</p> -->
+                             <p>Generally, Class 9th students who have just
+                                finished their junior level education have little
+                                or no knowledge about the secondary level learning
+                                because they have been in a different education pattern till now.</p>
                              <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">All Courses...</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="blog-box">
-                            <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/>
+                            <img src="assets/images/outerclassroom (3).jpg" alt="llog1" class="imgthree"/>
                             <h3>10th class</h3>
                             
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
-                                ducimus velit architecto optio fugit nemo aut error ullam,
-                                 maxime vitae?</p>
+                           <p>"Do well to grow up and accomplish things”
+                            “Nothing worth having comes easy, but as long as
+                            you work hard you'll get there”
+                            “Take calculated risks."
+                            “Work hard in high school to achieve”</p>
                                  <a routerLink="/course/1" routerLinkActive="active" class="btn btn-danger">All Courses...</a>
                             </div>
                         </div>
