--- a/src/app/staticpages/contact-us/contact-us.component.html
+++ b/src/app/staticpages/contact-us/contact-us.component.html
@@ -5,23 +5,11 @@
                 <div class="col-md-8">
                     <h1>Contact Us</h1>
                     <form>
-                        <div class="form-group">
-                            <input type="text" name="name" class="form-control" placeholder="Name">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" name="email" class="form-control" placeholder="E-mail">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" name="phone" class="form-control" placeholder="Phone">
-                                    </div>
-                                    <div class="form-group">
-                                        <textarea name="message" rows="5" class="form-control" placeholder="Message">
-                                            </textarea>
-                                            </div>
-                                   <div class="form-group">
-                                       <button class="btn btn-success">Send</button>
-                                       </div>
-                                
+                        <h2>AT-TELANGAPADA,PO-GADAKHARAD,DIST-PURI
+                            BLOCK-KANAS,PIN NO.752019 , Ph:91+9937089610
+                            E-Mail:santanupaikaray1962@gmail.com</h2>
+                        
+                             <h3>Google map:<a href="https://www.google.com/maps/place/ZETA+FINSERV(ATM)/">click here to visit...</a></h3>   
                         </form>
                     </div>
                 </div>
