--- a/src/app/staticpages/page/page.component.html
+++ b/src/app/staticpages/page/page.component.html
@@ -4,18 +4,33 @@
         <div class="row">
              <div class="col-md-4">
                 <div class="blog-box">
-                    <img src="assets/images/frontofclass room.jpg" alt="llog1"/>
-                  
+                    <img src="assets/images/schoolfront (2).jpg" alt="llog1"/>
+                <h3>THE INSTITUTION A.A.K.B.N,High School was established by MLA
+                    Ajaya Kumar Jena in year 1992. We at A.A.K.B.N,High School
+                    aim at preparing the future generation imbued with universal Vedic
+                    values, and distinct Indian cultural ethos. The nation feels proud
+                    of the achievements of students who have passed through the portals
+                    of this esteemed institution. To develop and motivate the child
+                    to learn and experience success in a conducive environment retaining
+                    Indian values.</h3> 
+                    <h2>Message of Honourable HeadMaster</h2>
+                  <img src="assets/images/headsir.jpg" class="imgone">
+                  <h4>“Education is a shared commitment between dedicated teachers,
+                    motivated students and enthusiastic parents with high expectations"
+                    A.A.K.B.N,High School is one of the leading educational institutions
+                    providing quality education to students.It supplements of a very good
+                    infrastructure, including libraries,facilities in sports and student centric
+                    activities promoting sustained quality education and ensure that the students
+                    have an open, enquiring mind and are competent enough in their field of studies.</h4>   
+                    <p>Santosh Kumar Paikaray</p>
                     
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
-                        ducimus velit architecto optio fugit nemo aut error ullam,
-                         maxime vitae?</p>
+           
                        
                     </div>
                 </div> 
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">
                     <div class="blog-box">
-                        <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/>
+                       
                         
                       
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
@@ -23,18 +38,18 @@
                              maxime vitae?</p>
                             
                         </div>
-                    </div>
-                    <div class="col-md-4">
+                    </div> -->
+                     <div class="col-md-4">
                         <div class="blog-box">
-                            <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/>
+                            <!-- <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/> -->
                             
                             
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
+                            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
                                 ducimus velit architecto optio fugit nemo aut error ullam,
                                  maxime vitae?</p>
-                                
+                                 -->
                             </div>
-                        </div>
+                        </div> 
             </div>
         </div>
     </section>
