add all changes

--- a/src/app/courses/course-featured/course-featured.component.html
+++ b/src/app/courses/course-featured/course-featured.component.html
@@ -3,33 +3,58 @@
         <div class="row">
             <div class="col-md-4 col-md-4 col-sm-12">
                 <div class="blog-box">
-                    <img src="assets/images/faculty.jpg" alt="blog1" class="firstimage">
+                   
+                    <img src="assets/images/headsir.jpg" alt="blog1" class="firstimage">
                     <!-- <h1>Lorem ipsum dolor sit amet consect
                         etur adipisicing elit. Illum, suscipit!</h1> -->
                     <!-- <p>by<span>Santanu Kumar Paikaray</span></p> -->
-                     <p>“Learning is to know; and Education is to think feel and do”</p> 
+                    <h5>Head Sir Message</h5>
+                    <p>“Education is a shared commitment between dedicated teachers,
+                        motivated students and enthusiastic parents with high expectations"
+                        A.A.K.B.N,High School is one of the leading educational institutions
+                        providing quality education to students.It supplements of a very good
+                        infrastructure, including libraries,facilities in sports and student centric
+                        activities promoting sustained quality education and ensure that the students
+                        have an open, enquiring mind and are competent enough in their field of studies.(Santosh Kumar Paikaray)</p>
+                     <!-- <p>“Learning is to know; and Education is to think feel and do”</p>  -->
                         <!-- <a href="#" class="btn btn-danger">Read more</a> -->
                     </div>
                 </div>
                 <div class="col-md-4 col-md-4 col-sm-12">
                     <div class=blog-box>
-                        <img src="assets/images/frontgate.jpg" alt="blog2"/>
+                        <img src="assets/images/faculty.jpg" alt="blog2" class="secondimage"/>
                         <!-- <h1>Lorem ipsum dolor sit amet consectetu
                             r adipisicing elit. Nemo, corrupti!</h1> -->
                             <!-- <p>by<span>Santanu Kumar Paikaray</span></p> -->
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                 Ullam cupiditate velit similique vitae </p>
+                            <h5>All Teachers Message</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                 Ad non consequuntur dolor, totam beatae officiis aut facere, 
+                                 cupiditate molestias nesciunt suscipit incidunt ex laudantium 
+                                 molestiae quasi. Officiis eos magnam impedit minus similique 
+                                 molestias temporibus enim dolorum asperiores nesciunt, 
+                                 eligendi natus qui provident sit expedita veritatis reiciendis
+                                  ipsam! Dignissimos, in harum. Quasi vero illo neque placeat,
+                                   ipsum non, fugit, enim repudiandae sequi eum 
+                                consequuntur similique maiores.</p>
                                  <!-- <a href="#" class="btn btn-danger">Read more</a> -->
                         </div>
                     </div>
                     <div class="col-md-4 col-md-4 col-sm-12">
                         <div class=blog-box>
-                            <img src="assets/images/schoolfront (3).jpg" alt="blog3"/>
+                          
+                            <img src="assets/images/schoolfront (3).jpg" alt="blog3" class="thirdimage"/>
                             <!-- <h1>Lorem ipsum dolor sit amet consectetu
                                 r adipisicing elit. Nemo, corrupti!</h1> -->
                                 <!-- <p>by<span>Santanu Kumar Paikaray</span></p> -->
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi
-                                     consequatur earum nostrum </p>
+                                <h5>School Environment</h5>
+                                <p>THE INSTITUTION A.A.K.B.N,High School was established by MLA
+                                    Ajaya Kumar Jena in year 1992. We at A.A.K.B.N,High School
+                                    aim at preparing the future generation imbued with universal Vedic
+                                    values, and distinct Indian cultural ethos. The nation feels proud
+                                    of the achievements of students who have passed through the portals
+                                    of this esteemed institution. To develop and motivate the child
+                                    to learn and experience success in a conducive environment retaining
+                                    Indian values. </p>
                                      <!-- <a href="#" class="btn btn-danger">Read more</a> -->
                             </div>
                         </div>
