--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,4 +1,4 @@
-<section class="blog-list mtb-48">
+<!-- <section class="blog-list mtb-48">
     <div class="Container">
         <h1>All Classes</h1>
         <div class="row">
@@ -22,7 +22,7 @@
                         <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus 
                             ducimus velit architecto optio fugit nemo aut error ullam,
                              maxime vitae?</p> -->
-                             <p>Generally, Class 9th students who have just
+                             <!-- <p>Generally, Class 9th students who have just
                                 finished their junior level education have little
                                 or no knowledge about the secondary level learning
                                 because they have been in a different education pattern till now.</p>
@@ -44,4 +44,55 @@
                         </div>
             </div>
         </div>
-    </section>
+    </section> --> 
+    <div class="jumbotron bg-white text-center">
+        <h1 class="display-4">10th Class</h1>
+        <!-- <img src="assets/images/frontofclass room.jpg" alt="llog1" class="imgone /"> -->
+        <hr>
+        <img src="assets/images/frontofclass room.jpg" alt="llog1" class="imgone /">
+        <img src="assets/images/frontofclass room.jpg" alt="llog1" class="imgone /">
+        <p class="lead">Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Sapiente dicta, quas repudiandae
+              recusandae saepe odit sequi earum officiis. 
+            Quas excepturi omnis sed incidunt similique assumenda 
+            nulla hic perferendis culpa amet?</p>
+            <hr class="my-4">
+            <p>Lorem ipsum dolor, sit amet consectetur 
+                adipisicing elit. Eius magnam distinctio
+                 doloremque omnis laborum necessitatibus
+                  maiores ut natus cumque blanditiis?</p>
+        </div>
+        <div class="jumbotron bg-white text-center">
+            <h1 class="display-4">9th Class</h1>
+            <!-- <img src="assets/images/frontofclass room.jpg" alt="llog1" class="imgone /"> -->
+            <hr>
+            <img src="assets/images/frontofclass room.jpg" alt="llog1" class="imgone /">
+            <img src="assets/images/frontofclass room.jpg" alt="llog1" class="imgone /">
+            <p class="lead">Lorem ipsum dolor sit amet consectetur
+                 adipisicing elit. Sapiente dicta, quas repudiandae
+                  recusandae saepe odit sequi earum officiis. 
+                Quas excepturi omnis sed incidunt similique assumenda 
+                nulla hic perferendis culpa amet?</p>
+                <hr class="my-4">
+                <p>Lorem ipsum dolor, sit amet consectetur 
+                    adipisicing elit. Eius magnam distinctio
+                     doloremque omnis laborum necessitatibus
+                      maiores ut natus cumque blanditiis?</p>
+            </div>
+            <div class="jumbotron bg-white text-center">
+                <h1 class="display-4">8th Class</h1>
+                <!-- <img src="assets/images/frontofclass room.jpg" alt="llog1" class="imgone /"> -->
+                <hr>
+                <img src="assets/images/frontofclass room.jpg" alt="llog1" class="imgone /">
+                <img src="assets/images/frontofclass room.jpg" alt="llog1" class="imgone /">
+                <p class="lead">Lorem ipsum dolor sit amet consectetur
+                     adipisicing elit. Sapiente dicta, quas repudiandae
+                      recusandae saepe odit sequi earum officiis. 
+                    Quas excepturi omnis sed incidunt similique assumenda 
+                    nulla hic perferendis culpa amet?</p>
+                    <hr class="my-4">
+                    <p>Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. Eius magnam distinctio
+                         doloremque omnis laborum necessitatibus
+                          maiores ut natus cumque blanditiis?</p>
+                </div>
