--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,6 +7,8 @@
                 </h6>
                 <p>Under Deipur Gramapanchyata,Near Telangapada Mainar School</p>
               
+               
+                
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <h6 class="text-uppercase font-weight-bold">
@@ -17,9 +19,36 @@
                         <br>santoshpaikaray1972@gmail.com
                         <br>+91-9937016910
                     </p>
+                  
 
                 </div>
             </div>
         </div>
+        <div class="footer-copyright text-center">
+            @ 2021 copyright; santanu kumar paikaray
+            </div>
+            <div class="container">
+                <a href="https://twitter.com/alturas" class="btn btn-social-icon fa fa-twitter" target="_blank">
+                     <!-- <span class="fa-stack fa-lg">
+                        <i class="fa fa-square- fa-stack-2x"></i>
+                        <i class="fa fa-twitter fa-stack-1x"></i>
+                        </span>  -->
+                        </a>&nbsp;
+               
+                
+                    <a href="https://twitter.com/alturas" class="btn btn-social-icon fa fa-facebook" target="_blank">
+                         <!-- <span class="fa-stack fa-lg">
+                            <i class="fa fa-square- fa-stack-2x"></i>
+                            <i class="fa fa-twitter fa-stack-1x"></i>
+                            </span>  -->
+                            </a>&nbsp;
+                            
+                    <a href="https://twitter.com/alturas" class="btn btn-social-icon fa fa-instagram" target="_blank">
+                        <!-- <span class="fa-stack fa-lg">
+                           <i class="fa fa-square- fa-stack-2x"></i>
+                           <i class="fa fa-twitter fa-stack-1x"></i>
+                           </span>  -->
+                           </a>
+                    </div>
 
 </footer>
