--- a/src/app/staticpages/contact-us/contact-us.component.html
+++ b/src/app/staticpages/contact-us/contact-us.component.html
@@ -1,4 +1,4 @@
-<section class="cmspage mtb-40">
+<!-- <section class="cmspage mtb-40">
     <div class="container">
         <div class="page-desc">
             <div class="row justify-content-center">
@@ -15,4 +15,14 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+    <div class="jumbotron bg-white text-center">
+        <h1 class="display-4">Contact Us</h1>
+        <hr>
+        <h3 class="lead">At-Telangapada,Po-Gadakharad,Dist-Puri
+            Block-Kanas,Pin no.-752019 , Ph no.-91+9937089610
+            E-Mail:santanupaikaray1962@gmail.com</h3>
+            <hr class="my-4">
+            <p>Google map:<a href="https://www.google.com/maps/place/ZETA+FINSERV(ATM)/">click here to visit...</a></p>
+        </div>
+    
