--- a/src/app/staticpages/page/page.component.html
+++ b/src/app/staticpages/page/page.component.html
@@ -1,9 +1,9 @@
-<section class="blog-list mtb-48">
+<!-- <section class="blog-list mtb-48">
     <div class="Container">
         <h1>About School</h1>
         <div class="row">
              <div class="col-md-4">
-                <div class="blog-box">
+                <div class="blog-box" text-center>
                     <img src="assets/images/schoolfront (2).jpg" alt="llog1"/>
                 <h3>THE INSTITUTION A.A.K.B.N,High School was established by MLA
                     Ajaya Kumar Jena in year 1992. We at A.A.K.B.N,High School
@@ -39,7 +39,7 @@
                             
                         </div>
                     </div> -->
-                     <div class="col-md-4">
+                     <!-- <div class="col-md-4">
                         <div class="blog-box">
                             <!-- <img src="assets/images/outerclassroom (3).jpg" alt="llog1"/> -->
                             
@@ -48,8 +48,26 @@
                                 ducimus velit architecto optio fugit nemo aut error ullam,
                                  maxime vitae?</p>
                                  -->
-                            </div>
+                            <!-- </div>
                         </div> 
             </div>
         </div>
-    </section>
+    </section> --> 
+    <div class="jumbotron bg-white text-center">
+        <h1>About Our School</h1>
+        <img src="assets/images/schoolfront (2).jpg" alt="llog1"/>
+        <img src="assets/images/schoolfront (2).jpg" alt="llog1"/>
+        <!-- <h1 class="display-4">Corona Covid-19 Tracker</h1> -->
+        <hr>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Sapiente dicta, quas repudiandae
+              recusandae saepe odit sequi earum officiis. 
+            Quas excepturi omnis sed incidunt similique assumenda 
+            nulla hic perferendis culpa amet?</p>
+            <hr class="my-4">
+            <p>Lorem ipsum dolor, sit amet consectetur 
+                adipisicing elit. Eius magnam distinctio
+                 doloremque omnis laborum necessitatibus
+                  maiores ut natus cumque blanditiis?</p>
+        </div>
+    
