--- a/src/app/courses/course-featured/course-featured.component.css
+++ b/src/app/courses/course-featured/course-featured.component.css
@@ -14,5 +14,16 @@ p{
     text-align: center;
 }
 .firstimage{
-    height: 28em;
+     height: 22em; 
+}
+h5{
+    color: blue;
+}
+.secondimage{
+    height: 22em;
+
+}
+.thirdimage{
+    height: 22em;
+
 }
